# R2_api

./: .editorconfig  .env.example  .flake8  LICENSE  pyproject.toml
src/activity/: apps.py  models.py
src/activity/application/: use_cases.py
src/activity/domain/: repositories.py  services.py
src/activity/infrastructure/: admin.py  repositories.py
src/activity/migrations/: 0001_initial.py  0002_add_vehicle_to_activity_entry.py  0003_add_mileage_entry.py  0004_add_expense_entry.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/driver_profiles/: admin.py  apps.py  models.py
src/driver_profiles/migrations/: 0001_initial.py  0002_driverprofile_driver_license_and_more.py  0003_alter_driverprofile_user_and_more.py
src/drivers/: admin.py  models.py
src/drivers/migrations/: 0001_initial.py  0002_driverprofile_driver_license_and_more.py  0003_alter_driverprofile_user_and_more.py
src/fleet/: apps.py  models.py
src/fleet/application/: use_cases.py
src/fleet/domain/: repositories.py  services.py  value_objects.py
src/fleet/infrastructure/: admin.py  repositories.py
src/fleet/migrations/: 0001_initial.py  0002_create_vehicle.py  0003_add_driver_license_fields.py  0004_alter_vehicle_options_and_more.py  0005_alter_vehicle_options_and_more.py  0006_alter_driver_user_and_more.py  0007_rename_vehicle_driver_profile_to_driver.py
src/identity/: apps.py  models.py
src/identity/application/: use_cases.py
src/identity/domain/: repositories.py  value_objects.py
src/users/: admin.py  forms.py  models.py
src/vehicles/: admin.py  models.py
(+24 files in other folders)
